# advent-of-code

./: .gitignore  .rusty-hook.toml  Cargo.toml
2020/: 01.py  02.py  Util.py
2021/inputs/1/: sonar-sweep.csv
2021/inputs/2/: course-instructions.csv
2021/inputs/3/: diagnostic-report.csv
2021/inputs/4/: draw-order.csv
2021/solutions/1/: problem-1.ipynb
2021/solutions/2/: problem-2.ipynb
2021/solutions/3/: problem-3.ipynb
2021/solutions/4/: problem-4.ipynb
2021/solutions/5/: problem_5.py
2024/day-1/: .rusty-hook.toml  Cargo.toml
2024/day-1/src/: main.rs
2024/day-2/: Cargo.toml
2024/day-2/src/: main.rs
2024/day-3/: Cargo.toml  bacon.toml
2024/day-3/src/: main.rs
2024/day-4/: Cargo.toml
2024/day-4/src/: main.rs
2024/day-5/: Cargo.toml
2024/day-5/src/: main.rs
2025/aoc_elixir/: .gitignore  mix.exs
2025/aoc_elixir/lib/: aoc_elixir.ex  day_eight.ex  day_five.ex  day_four.ex  day_nine.ex  day_one.ex  day_seven.ex  day_six.ex  day_ten.ex  day_three.ex  day_two.ex
2025/aoc_elixir/test/: aoc_elixir_test.exs  day_eight_test.exs  day_five_test.exs  day_four_test.exs  day_nine_test.exs  day_seven_test.exs  day_six_test.exs  day_ten_test.exs  day_three_test.exs  day_two_test.exs
